--- a/index.html
+++ b/index.html
@@ -140,32 +140,26 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
         <div class="row">
           <div class="col-md-12">
             <div class="services">
-              <!-- Service Box 1 -->
-              <div class="col-md-6 wp2 item">
+                            <!-- Service Box 1 -->
+                            <div class="col-md-6 wp2 item delay-05s">
+                              <div class="icon">
+                                <i class="fa fa-code"></i
+                                ><!-- Icon -->
+                              </div>
+                              <h2>React Developer</h2>
+                              <p>
+                                I am a <b>front-end</b> developer that uses <b>React</b> to create interactive & responsive UIs.
+                              </p>
+                            </div>
+              <!-- Service Box 2 -->
+              <div class="col-md-6 wp2 item delay-05s">
                 <div class="icon">
                   <i class="fa fa-music"></i
                   ><!-- Icon -->
                 </div>
                 <h2>Musician</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a
-                  lorem quis neque interdum consequat ut sed sem. Duis quis
-                  tempor nunc. Interdum et malesuada fames ac ante ipsum primis
-                  in faucibus.
-                </p>
-              </div>
-              <!-- Service Box 2 -->
-              <div class="col-md-6 wp2 item delay-05s">
-                <div class="icon">
-                  <i class="fa fa-code"></i
-                  ><!-- Icon -->
-                </div>
-                <h2>React Developer</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a
-                  lorem quis neque interdum consequat ut sed sem. Duis quis
-                  tempor nunc. Interdum et malesuada fames ac ante ipsum primis
-                  in faucibus.
+                  I code my own experimental music from scratch using SuperCollider.
                 </p>
               </div>
             </div>
@@ -331,7 +325,7 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
           <div class="col-md-4">
             <div class="dark-box box-hover">
               <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-              <p><a href="mailto:buendia.barcelo@gmail.com"><b>buendia.barcelo@gmail.com</b></a></p>
+              <p><a class="email" href="mailto:buendia.barcelo@gmail.com">buendia.barcelo@gmail.com</a></p>
             </div>
           </div>
         </div>
@@ -341,17 +335,15 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
           <div class="col-md-12">
             <ul class="social-buttons">
               <li>
-                <a href="https://dnl-bnd.bandcamp.com/" class="social-btn"
-                  ><i class="fa fa-music"></i
-                ></a>
-              </li>
-
-              <li>
                 <a href="https://github.com/dbuendia" class="social-btn"
                   ><i class="fa fa-github"></i
                 ></a>
               </li>
-              <!-- youtube -->
+              <li>
+                <a href="https://dnl-bnd.bandcamp.com/" class="social-btn"
+                  ><i class="fa fa-music"></i
+                ></a>
+              </li>
             </ul>
           </div>
         </div>
