--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </h1>
               <!-- Title -->
               <h3 class="animated fadeInUp delay-05s">
-                <span class="rotate">React Dev, Musician, Front-End</span>
+                <span class="rotate">React Dev, Musician, Front-End Dev</span>
               </h3>
               <!-- Text Rotator -->
             </div>
@@ -307,22 +307,15 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
           </div>
         </div>
         <div class="row contact-details">
-          <!-- Adress Box -->
-          <div class="col-md-4">
-            <div class="dark-box box-hover">
-              <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-              <p>Ausiàs Marc, 14, 08010, Barcelona</p>
-            </div>
-          </div>
           <!-- Phone Number Box -->
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="dark-box box-hover">
               <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
               <p>+34 630 25 73 53</p>
             </div>
           </div>
           <!-- E-Mail Box -->
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="dark-box box-hover">
               <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
               <p><a class="email" href="mailto:buendia.barcelo@gmail.com">buendia.barcelo@gmail.com</a></p>
