Adds devs united to portfolio

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
         <!-- PORTFOLIO ITEM 2 -->
 
             <div class="img">
-              <a href="https://dbuendia.github.io/product-hunt/"
+              <a href="https://test-4addb.firebaseapp.com/"
                 ><img
                   class="grayscale"
-                  src="img/portfolio/product-hunt.png"
+                  src="img/portfolio/devs-united.svg"
                   alt="Portfolio Item"
               />
-              <div class="portfolio-text"><p>Product Hunt</p><span>Rate your desired products</span></div></a></a>
+              <div class="portfolio-text"><p>Devs United</p><span>A Twitter inspired Social Media. Log in and post your thoughts!</span></div></a></a>
         </div>
         <!-- PORTFOLIO ITEM END -->
 
@@ -262,7 +262,7 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
                   src="img/portfolio/meals.png"
                   alt="Portfolio Item"
               />
-              <div class="portfolio-text"><p>Meals App</p><span>Search cooking recipees and add them to favourites</span></div>
+              <div class="portfolio-text"><p>Meals App</p><span>Search cooking recipees and add them to your favourites</span></div>
             </a>
             </div>
 
