--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
         <!-- PORTFOLIO ITEM 2 -->
 
             <div class="img">
-              <a href="https://test-4addb.firebaseapp.com/"
+              <a class="devs-united" href="https://test-4addb.firebaseapp.com/"
                 ><img
                   class="grayscale"
                   src="img/portfolio/devs-united.svg"
