--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ My specialty sits on building detail-oriented frontend UI’s with React, with a
                   src="img/portfolio/yokai.png"
                   alt="Portfolio Item"
               />
-              <div class="portfolio-text"><p>Yokai Worship</p><span>Choose, filter and vote your favourite Yokai</span></div></a>
+              <div class="portfolio-text"><p>Yokai Worship</p><span>Choose, filter and vote for your favourite Yokai</span></div></a>
         </div>
         <!-- PORTFOLIO ITEM END -->
 
