--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="css/animate.css" rel="stylesheet" />
     <!-- Custom Favicon -->
     <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon.ico">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
